	return values. Inspired by work done by Daniel Drake (dsd@gentoo.org)
	* rsvg-base.c, rsvg-convert.c, rsvg-defs.c, rsvg-file-util.c, rsvg.c, test-display.c: Ditto
	* test-display.c: Don't show zoom buttons in the Mozilla plugin
	* rsvg-cairo-draw.c: Bug #330022; code computes wrong pixel values with color = 0xFF and alpha - 0xff. From Emmanuel Pacaud.
	
2006-02-05 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg.in, configure.in: committed two patches from Daniel Drake in regards to our python rsvg script.

2006-02-04 Rob Staudinger <robert.staudinger@gmail.com>

	* rsvg-gobject.c: add props "width", "height", "em", "ex" (all read only)
	* rsvg.h: fix doc after cairo rendering renaming

2006-02-04 Dom Lachowicz <cinamod@hotmail.com>

	* *.c: Rename rsvg_cairo_render to rsvg_handle_render_cairo, for
	better GObject consistency
	* configure.in: 2.13.91
	
2006-02-04 Dom Lachowicz <cinamod@hotmail.com>

	* doc/*: Update documentation. I'm pretty happy with how things look
	and are arranged now.
	* *.c: Don't use newly deprecated functions
	* configure.in: 2.13.90

2006-02-04 Rob Staudinger <robert.staudinger@gmail.com>

	* rsvg-gobject.c: RsvgHandle now derives from GObject. This doesn't
	break API/ABI.
	
2006-02-03 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-cairo-draw.c: fixed a nasty pattern regression I made a month ago when I was cleaning up the code.

2006-02-03 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-structure.c: bug #329636

2006-01-28 Dom Lachowicz <cinamod@hotmail.com>

	* Update documentation. Should be near 100% symbol coverage.
	
2006-01-19 Rob Staudinger <robert.staudinger@gmail.com>

	* add gtk-doc.make for doc build

2006-01-17 Rob Staudinger <robert.staudinger@gmail.com>

	* configure.in: re-enable gtk-doc build
	* Makefile.am: dist and cvs add gtk-doc.make
	* doc/Makefile.am: include gtk-doc.make instead of copying the targets

2006-01-16 Rob Staudinger <robert.staudinger@gmail.com>
